# world-cup-predictor

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: app_lib.py  pages_views.py  streamlit_app.py
app/assets/screenshots/: make_placeholders.py
data/: generate_sample_data.py  sample_matches.csv  teams.csv
docs/: backtesting.md  data_sources.md  deployment.md  model_explanation.md
notebooks/: model_exploration.ipynb
scripts/: download_data.py  prepare_data.py  run_backtest.py
src/: config.py  data_loader.py  evaluation.py  feature_engineering.py  main.py  model.py  odds_converter.py  predictor.py  tournament_2026.py  utils.py
src/wc_predictor/: __init__.py
tests/: conftest.py  test_api.py  test_app.py  test_cli.py  test_data_pipeline.py  test_evaluation.py  test_features.py  test_odds.py  test_predictor.py  test_tournament_2026.py
