[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-predictor"
version = "0.1.0"
description = "Predict World Cup match outcomes and odds using Elo ratings, team form, expected goals, Poisson modelling and machine learning."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gurnoor" }]
keywords = ["football", "soccer", "world-cup", "elo", "poisson", "machine-learning", "streamlit"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "streamlit>=1.30",
    "altair>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
