[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-predictor"
version = "0.1.0"
description = "Predict World Cup match outcomes and odds using Elo ratings, team form, expected goals, Poisson modelling and machine learning."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gurnoor" }]
keywords = ["football", "soccer", "world-cup", "elo", "poisson", "machine-learning", "streamlit"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "streamlit>=1.30",
    "plotly>=5.18",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.8"]
# Optional FastAPI backend (api/main.py). Not needed for the Streamlit app/CLI.
api = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.26"]
# Optional gradient-boosting backends. The code falls back to scikit-learn if
# these are not installed, so they are kept out of the default requirements.
boosting = ["xgboost>=2.0", "lightgbm>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
# Flat module layout: source files live directly under src/.
package-dir = { "" = "src" }
py-modules = [
    "config",
    "utils",
    "data_loader",
    "feature_engineering",
    "model",
    "predictor",
    "odds_converter",
    "evaluation",
    "tournament_2026",
    "main",
]
