[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-predictor"
version = "0.1.0"
description = "Predict World Cup match outcomes and odds using Elo ratings, team form, expected goals, Poisson modelling and machine learning."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Gurnoor" }]
keywords = ["football", "soccer", "world-cup", "elo", "poisson", "machine-learning", "streamlit"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "streamlit>=1.30",
    "plotly>=5.18",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5", "mypy>=1.8"]
# Optional FastAPI backend (api/main.py). Not needed for the Streamlit app/CLI.
api = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.26"]
# Optional gradient-boosting backends. The code falls back to scikit-learn if
# these are not installed, so they are kept out of the default requirements.
boosting = ["xgboost>=2.0", "lightgbm>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "app", "api", "scripts", "tests"]
extend-exclude = ["notebooks", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# Underscore-prefixed helpers are intentionally "private but shared"; the app
# and predictor import a couple on purpose.
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
# Tests reach into internals and use star-ish patterns; keep them relaxed.
"tests/*" = ["E402", "B011"]
"app/*" = ["E402"]
"api/*" = ["E402"]
"scripts/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
# Pragmatic, not strict: this is a portfolio project, not a type-theory exercise.
disallow_untyped_defs = false
check_untyped_defs = false
files = ["src"]

[tool.setuptools]
# Flat module layout: source files live directly under src/.
package-dir = { "" = "src" }
py-modules = [
    "config",
    "utils",
    "data_loader",
    "feature_engineering",
    "model",
    "predictor",
    "odds_converter",
    "evaluation",
    "tournament_2026",
    "main",
]
